--- a/puppet/services/cinder-base.yaml
+++ b/puppet/services/cinder-base.yaml
@@ -67,3 +67,5 @@ outputs:
         cinder::keystone::auth::tenant: 'service'
         cinder::host: hostgroup
         cinder::cron::db_purge::destination: '/dev/null'
+        cinder::db::database_db_max_retries: -1
+        cinder::db::database_max_retries: -1
