--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -106,6 +106,8 @@ outputs:
         glance::keystone::auth::internal_url: {get_param: [EndpointMap, GlanceInternal, uri]}
         glance::keystone::auth::admin_url: {get_param: [EndpointMap, GlanceAdmin, uri]}
         glance::keystone::auth::password: {get_param: GlancePassword }
+        glance::registry::db::database_db_max_retries: -1
+        glance::registry::db::database_max_retries: -1
         tripleo.glance_api.firewall_rules:
           '112 glance_api':
             dport:
