--- a/puppet/services/glance-registry.yaml
+++ b/puppet/services/glance-registry.yaml
@@ -50,6 +50,8 @@ outputs:
         glance::db::mysql::allowed_hosts:
           - '%'
           - "%{hiera('mysql_bind_host')}"
+        glance::registry::db::database_db_max_retries: -1
+        glance::registry::db::database_max_retries: -1
 
         tripleo.glance_registry.firewall_rules:
           '112 glance_registry':
