--- a/puppet/services/heat-base.yaml
+++ b/puppet/services/heat-base.yaml
@@ -56,3 +56,5 @@ outputs:
         heat::cron::purge_deleted::age_type: 'days'
         heat::cron::purge_deleted::maxdelay: 3600
         heat::cron::purge_deleted::destination: '/dev/null'
+        heat::db::database_db_max_retries: -1
+        heat::db::database_max_retries: -1
