--- a/puppet/services/neutron-base.yaml
+++ b/puppet/services/neutron-base.yaml
@@ -65,3 +65,5 @@ outputs:
         neutron::rabbit_heartbeat_timeout_threshold: 60
         neutron::host: '"%{::fqdn}"'    #NOTE: extra quoting is needed
         neutron::keystone::auth::tenant: 'service'
+        neutron::db::database_db_max_retries: -1
+        neutron::db::database_max_retries: -1
