--- a/puppet/services/nova-base.yaml
+++ b/puppet/services/nova-base.yaml
@@ -101,3 +101,5 @@ outputs:
         nova::db::mysql_api::allowed_hosts:
           - '%'
           - "%{hiera('mysql_bind_host')}"
+        nova::db::database_db_max_retries: -1
+        nova::db::database_max_retries: -1
