--- a/puppet/services/pacemaker/haproxy.yaml
+++ b/puppet/services/pacemaker/haproxy.yaml
@@ -27,5 +27,6 @@ outputs:
           - tripleo::haproxy::haproxy_service_manage: false
             tripleo::haproxy::mysql_clustercheck: true
             enable_keepalived: false
+            tripleo::haproxy::keepalived: false
       step_config: |
         include ::tripleo::profile::pacemaker::haproxy
