--- a/puppet/services/sahara-base.yaml
+++ b/puppet/services/sahara-base.yaml
@@ -49,3 +49,5 @@ outputs:
         sahara::rpc_backend: rabbit
         sahara::admin_tenant_name: 'service'
         sahara::keystone::auth::tenant: 'service'
+        sahara::db::database_db_max_retries: -1
+        sahara::db::database_max_retries: -1
