--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -10,57 +10,21 @@ parameters:
     type: string
   controller_ips:
     type: comma_delimited_list
+  service_ips:
+    type: json
   controller_names:
     type: comma_delimited_list
   rabbit_node_ips:
     type: comma_delimited_list
-  mongo_node_ips:
-    type: comma_delimited_list
-  redis_node_ips:
-    type: comma_delimited_list
   memcache_node_ips:
-    type: comma_delimited_list
-  mysql_node_ips:
-    type: comma_delimited_list
-  horizon_node_ips:
-    type: comma_delimited_list
-  heat_api_node_ips:
-    type: comma_delimited_list
-  swift_proxy_node_ips:
-    type: comma_delimited_list
-  ceilometer_api_node_ips:
-    type: comma_delimited_list
-  aodh_api_node_ips:
-    type: comma_delimited_list
-  nova_api_node_ips:
-    type: comma_delimited_list
-  nova_metadata_node_ips:
-    type: comma_delimited_list
-  glance_api_node_ips:
-    type: comma_delimited_list
-  glance_registry_node_ips:
-    type: comma_delimited_list
-  gnocchi_api_node_ips:
-    type: comma_delimited_list
-  cinder_api_node_ips:
-    type: comma_delimited_list
-  manila_api_node_ips:
-    type: comma_delimited_list
-  neutron_api_node_ips:
     type: comma_delimited_list
   keystone_public_api_node_ips:
     type: comma_delimited_list
   keystone_admin_api_node_ips:
     type: comma_delimited_list
-  sahara_api_node_ips:
-    type: comma_delimited_list
-  ironic_api_node_ips:
-    type: comma_delimited_list
   ceph_mon_node_ips:
     type: comma_delimited_list
   ceph_mon_node_names:
-    type: comma_delimited_list
-  opendaylight_api_node_ips:
     type: comma_delimited_list
   DeployIdentifier:
     type: string
@@ -112,6 +76,8 @@ resources:
                         for_each:
                           SERVICE:
                             str_split: [',', {get_param: enabled_services}]
+                  # provides a mapping of service_name_ips to a list of IPs
+                  - {get_param: service_ips}
                   - controller_node_ips:
                       list_join:
                       - ','
@@ -132,30 +98,6 @@ resources:
                             list_join:
                             - "','"
                             - {get_param: rabbit_node_ips}
-                    mongodb_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: mongo_node_ips}
-                    redis_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: redis_node_ips}
-                    memcached_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: memcache_node_ips}
                     memcached_node_ips_v6:
                       str_replace:
                         template: "['inet6:[SERVERS_LIST]']"
@@ -164,127 +106,6 @@ resources:
                             list_join:
                             - "]','inet6:["
                             - {get_param: memcache_node_ips}
-                    mysql_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: mysql_node_ips}
-                    horizon_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: horizon_node_ips}
-                    heat_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: heat_api_node_ips}
-                    swift_proxy_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: swift_proxy_node_ips}
-                    ceilometer_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: ceilometer_api_node_ips}
-                    aodh_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: aodh_api_node_ips}
-                    gnocchi_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: gnocchi_api_node_ips}
-                    nova_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: nova_api_node_ips}
-                    nova_metadata_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: nova_metadata_node_ips}
-                    glance_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: glance_api_node_ips}
-                    glance_registry_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: glance_registry_node_ips}
-                    cinder_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: cinder_api_node_ips}
-                    manila_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: manila_api_node_ips}
-                    neutron_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: neutron_api_node_ips}
-                    # TODO: pass a `midonet_api_node_ips` var
-                    midonet_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: neutron_api_node_ips}
                     keystone_public_api_node_ips:
                       str_replace:
                         template: "['SERVERS_LIST']"
@@ -301,31 +122,6 @@ resources:
                             list_join:
                             - "','"
                             - {get_param: keystone_admin_api_node_ips}
-                    sahara_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: sahara_api_node_ips}
-                    ironic_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: ironic_api_node_ips}
-                    opendaylight_api_node_ips:
-                      str_replace:
-                        template: "['SERVERS_LIST']"
-                        params:
-                          SERVERS_LIST:
-                            list_join:
-                            - "','"
-                            - {get_param: opendaylight_api_node_ips}
-
                     tripleo::profile::base::ceph::ceph_mon_initial_members:
                       list_join:
                       - ','
