Disable mistral services by default.
Optional services should be disabled by default in the overcloud nodes.
This submission makes mistral disabled by default and allows to enable
it base on an environment file.

Depends-On: I942d419be951651e305d01460f394870c30a9878

Change-Id: I0dd245b75142834f71f3bd591b43c3f69d63217b

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -203,6 +203,9 @@ resource_registry:
   OS::TripleO::Services::AodhEvaluator: puppet/services/aodh-evaluator.yaml
   OS::TripleO::Services::AodhNotifier: puppet/services/aodh-notifier.yaml
   OS::TripleO::Services::AodhListener: puppet/services/aodh-listener.yaml
+  OS::TripleO::Services::MistralEngine: OS::Heat::None
+  OS::TripleO::Services::MistralApi: OS::Heat::None
+  OS::TripleO::Services::MistralExecutor: OS::Heat::None
 
 parameter_defaults:
   EnablePackageInstall: false
