Glance worker count fix
This patch changes the default value and type of the Glance worker
configuration to allow it to be unset and allow a system dependent
default to be used (e.g. processorcount or some derivative value). The
previous default of 0 would result in a single self contained process,
which while suitable for debugging and testing is not appropriate for
production deployments.

Partial-Bug: #1626126
Change-Id: I58a6a72a581e7083e1dc4e5ca568fdd3fdd6cdf1

--- a/puppet/services/glance-registry.yaml
+++ b/puppet/services/glance-registry.yaml
@@ -27,9 +27,16 @@ parameters:
     type: string
     hidden: true
   GlanceWorkers:
-    default: 0
-    description: Number of workers for Glance service.
-    type: number
+    default: ''
+    description: |
+      Number of worker processes for glance registry. If left unset (empty
+      string), the default value will result in the configuration being left
+      unset and a system-dependent default value will be chosen (e.g.: number of
+      processors). Please note that this will create a large number of processes
+      on systems with a large number of CPUs resulting in excess memory
+      consumption. It is recommended that a suitable non-default value be
+      selected on such systems.
+    type: string
   MonitoringSubscriptionGlanceRegistry:
     default: 'overcloud-glance-registry'
     type: string
