--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -45,9 +45,16 @@ parameters:
     constraints:
     - allowed_values: ['swift', 'file', 'rbd']
   GlanceWorkers:
-    default: 0
-    description: Number of workers for Glance service.
-    type: number
+    default: ''
+    description: |
+      Number of API worker processes for Glance. If left unset (empty string), the
+      default value will result in the configuration being left unset and a
+      system-dependent default value will be chosen (e.g.: number of
+      processors). Please note that this will create a large number of
+      processes on systems with a large number of CPUs resulting in excess
+      memory consumption. It is recommended that a suitable non-default value
+      be selected on such systems.
+    type: string
   GlanceRbdPoolName:
     default: images
     type: string
