Replace hard-coded regionOne with parameter references
In a few places we hard-code the config values to regionOne, but
there is a parameter available to set this.

Change-Id: I9f5138103deb45f7432ee44e03a08dcf54c2990d

--- a/puppet/services/gnocchi-base.yaml
+++ b/puppet/services/gnocchi-base.yaml
@@ -30,6 +30,10 @@ parameters:
   CephClientUserName:
     default: openstack
     type: string
+  KeystoneRegion:
+    type: string
+    default: 'regionOne'
+    description: Keystone region for endpoint
 
 outputs:
   aux_parameters:
@@ -52,7 +56,7 @@ outputs:
               - '@'
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/gnocchi'
-        gnocchi::keystone::auth::region: 'regionOne'
+        gnocchi::keystone::auth::region: {get_param: KeystoneRegion}
         gnocchi::keystone::auth::tenant: 'service'
         gnocchi::keystone::auth::password: {get_param: GnocchiPassword}
         gnocchi::db::mysql::password: {get_param: GnocchiPassword}
@@ -90,5 +94,5 @@ outputs:
         gnocchi::db::mysql::allowed_hosts:
           - '%'
           - "%{hiera('mysql_bind_host')}"
-        gnocchi::auth::auth_region: 'regionOne'
+        gnocchi::auth::auth_region: {get_param: KeystoneRegion}
         gnocchi::auth::auth_tenant_name: 'service'
