Set Coordination url for central agent
Use the redis_vip value from hiera.

Change-Id: I3b354012c8c054633497a6d80ff325f55e7b7142

--- a/puppet/services/ceilometer-agent-central.yaml
+++ b/puppet/services/ceilometer-agent-central.yaml
@@ -13,10 +13,6 @@ parameters:
     description: The password for the redis service account.
     type: string
     hidden: true
-  RedisVirtualIPUri:
-    type: string
-    default: ''
-
 
 resources:
   CeilometerServiceBase:
@@ -38,7 +34,7 @@ outputs:
                 - - 'redis://:'
                   - {get_param: RedisPassword}
                   - '@'
-                  - {get_param: RedisVirtualIPUri}
+                  - "%{hiera('redis_vip')}"
                   - ':6379/'
       step_config: |
         include ::tripleo::profile::base::ceilometer::agent::central
