Add management network to list of networks to ping
Add the end of overcloud deployment, a list of network IP addresses
for isolated networks is used to check connectivity.  The management
network IP address is missing from this list.  This fix adds it in
so that the management network will be checked if it is configured.

Change-Id: I02b020681bed7fbd6d05416280d51a2cbcc50eee
Closes-Bug: 1609554

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -1147,6 +1147,7 @@ resources:
           - {get_attr: [Controller, resource.0.storage_ip_address]}
           - {get_attr: [Controller, resource.0.storage_mgmt_ip_address]}
           - {get_attr: [Controller, resource.0.tenant_ip_address]}
+          - {get_attr: [Controller, resource.0.management_ip_address]}
 
   ControllerAllNodesValidationDeployment:
     type: OS::Heat::StructuredDeployments
