--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -247,6 +247,10 @@ parameters:
       in the ring.
     hidden: true
     type: string
+  SwiftRawDisks:
+    default: {}
+    description: 'A hash of additional raw devices to use as Swift backend (eg. {sdb: {}})'
+    type: json
   UpgradeLevelNovaCompute:
     type: string
     description: Nova Compute upgrade level
@@ -893,7 +897,14 @@ outputs:
     description: Swift device formatted for swift-ring-builder
     value:
       str_replace:
-        template: 'r1z1-IP:%PORT%/d1'
+        template:
+          list_join:
+            - ','
+            - ['r1z1-IP:%PORT%/d1']
+            - repeat:
+                template: 'r1z1-IP:%PORT%/DEVICE'
+                for_each:
+                  DEVICE: {get_param: SwiftRawDisks}
         params:
           IP:
             get_attr:
