Adding optional aci-opflex hiera data
This change adds an optional cisco_aci hiera data file during
ControllerExtraConfigPre and  ComputeExtraConfigPre

Change-Id: I158276f80c107e611817f6bc3b557dbf6dce19ee
Implements: blueprint aci-opflex

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -646,6 +646,7 @@ resources:
             - neutron_cisco_data # Optionally provided by ControllerExtraConfigPre
             - cisco_n1kv_data # Optionally provided by ControllerExtraConfigPre
             - midonet_data #Optionally provided by AllNodesExtraConfig
+            - cisco_aci_data # Optionally provided by ControllerExtraConfigPre
           merge_behavior: deeper
           datafiles:
             service_names:
