--- a/puppet/services/cinder-api.yaml
+++ b/puppet/services/cinder-api.yaml
@@ -34,10 +34,10 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [CinderBase, role_data, config_settings]
-          - cinder::api::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
-            cinder::api::identity_uri: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
-            cinder::api::keystone_password: {get_param: CinderPassword}
-            cinder::api::keystone_tenant: 'service'
+          - cinder::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
+            cinder::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
+            cinder::keystone::authtoken::password: {get_param: CinderPassword}
+            cinder::keystone::authtoken::project_name: 'service'
             cinder::api::enable_proxy_headers_parsing: true
             cinder::api::nova_catalog_info: 'compute:Compute Service:internalURL'
             # TODO(emilien) move it to puppet-cinder
