Disable the Mon/OSD/Client resources in puppet-ceph-external
Change-Id: Iaa9dbf3545d5d001ad1d86b33df797880d922878
Closes-Bug: 1610258

--- a/puppet/services/ceph-base.yaml
+++ b/puppet/services/ceph-base.yaml
@@ -4,7 +4,9 @@ description: >
   Ceph base service. Shared by all Ceph services.
 
 parameters:
+  # NOTE(gfidente): needs a default to cope with external Ceph deployments were we don't pass (and need) an Admin key
   CephAdminKey:
+    default: ''
     description: The Ceph admin client key. Can be created with ceph-authtool --gen-print-key.
     type: string
     hidden: true
