Revert "We don't need to set a default for the CephX keys and cluster FSID"
This reverts commit 9b1ceee031644c798c5c01d9689f15b4daf44aa7. In mitaka
we don't have roles so upgrade of those deployments not using Ceph will
fail validation unless we have a default set for these parameters.

Closes-Bug: 1610258
Change-Id: I58832df1deb17fbb7df4b2180aa61290852a8aaf

--- a/puppet/ceph-cluster-config.yaml
+++ b/puppet/ceph-cluster-config.yaml
@@ -11,13 +11,17 @@ parameters:
     type: string
     description: List of external Ceph Mon host IPs.
   ceph_client_key:
+    default: ''
     type: string
     description: Ceph key used to create the client user keyring.
   ceph_fsid:
+    default: ''
     type: string
   ceph_admin_key:
+    default: ''
     type: string
   ceph_mon_key:
+    default: ''
     type: string
   ceph_mon_names:
     type: comma_delimited_list
