--- a/puppet/extraconfig/ceph/ceph-external-config.yaml
+++ b/puppet/extraconfig/ceph/ceph-external-config.yaml
@@ -11,15 +11,19 @@ parameters:
     type: string
     description: List of external Ceph Mon host IPs.
   ceph_client_key:
+    default: ''
     type: string
     description: Ceph key used to create the 'openstack' user keyring.
   ceph_fsid:
+    default: ''
     type: string
   # The following parameters are unused for external Ceph clusters and
   # are here and exist for compatibility
   ceph_admin_key:
+    default: ''
     type: string
   ceph_mon_key:
+    default: ''
     type: string
   ceph_mon_names:
     type: comma_delimited_list
