--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -40,13 +40,16 @@ parameters:
     - allowed_values: ['gnocchi', 'database']
   # This has to be an UUID so for now we generate it outside the template
   CephClusterFSID:
+    default: ''
     type: string
     description: The Ceph cluster FSID. Must be a UUID.
   CephMonKey:
+    default: ''
     description: The Ceph monitors key. Can be created with ceph-authtool --gen-print-key.
     type: string
     hidden: true
   CephAdminKey:
+    default: ''
     description: The Ceph admin client key. Can be created with ceph-authtool --gen-print-key.
     type: string
     hidden: true
@@ -55,6 +58,7 @@ parameters:
     description: Whether to enable or not the NFS backend for Cinder
     type: boolean
   CephClientKey:
+    default: ''
     description: The Ceph client key. Can be created with ceph-authtool --gen-print-key. Currently only used for external Ceph deployments to create the openstack user keyring.
     type: string
     hidden: true
