Make deployed-server OS::Neutron::Port optional
This patch makes it possible to set
OS::TripleO::DeployedServer::ControlPlanePort: OS::Heat::None
in your resource_registry and thereby avoid the creation of
a neutron port for the deployed server. This is useful if
you are bootstrapping things in an environment without
Neutron.

Also, includes a new deployed-server-noop-ctlplane.yaml
environment file.

Change-Id: I2990dc816698e0f6e3193a8fc7c9c6767c6e50e5

--- a/deployed-server/deployed-server.yaml
+++ b/deployed-server/deployed-server.yaml
@@ -94,16 +94,9 @@ resources:
       server: {get_resource: deployed-server}
 
   ControlPlanePort:
-    type: OS::Neutron::Port
+    type: OS::TripleO::DeployedServer::ControlPlanePort
     properties:
-      network: ctlplane
-      name:
-        list_join:
-          - '-'
-          - - {get_attr: [HostsEntryDeployment, hostname]}
-            - ctlplane
-            - port
-      replacement_policy: AUTO
+      Hostname: {get_attr: [HostsEntryDeployment, hostname]}
 
 outputs:
   # FIXME(shardy) this is needed because TemplateResource returns an
@@ -113,7 +106,7 @@ outputs:
   networks:
     value:
       ctlplane:
-        - {get_attr: [ControlPlanePort, fixed_ips, 0, ip_address]}
+        - {get_attr: [ControlPlanePort, ip_address]}
   name:
    value: {get_attr: [HostsEntryDeployment, hostname]}
   hosts_entry:
