Allow a fixed IP to be allocated to RedisVirtualIP
The overcloud stack now contains a parameter RedisVirtualFixedIPs which will
allow people to specify the IP address they would like to be assigned as a vip
used by Redis. This will allow people full control over what IPs are used as
VIPs during a deployment.

Change-Id: Ib24e62847c4ac43fcd2a09bc84b4a76e992add4b

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -102,6 +102,12 @@ parameters:
         Control the IP allocation for the StorageMgmgVirtualInterface port. E.g.
         [{'ip_address':'1.2.3.4'}]
     type: json
+  RedisVirtualFixedIPs:
+    default: []
+    description: >
+        Control the IP allocation for the virtual IP used by Redis. E.g.
+        [{'ip_address':'1.2.3.4'}]
+    type: json
   CloudDomain:
     default: 'localdomain'
     type: string
@@ -793,6 +799,7 @@ resources:
       PortName: redis_virtual_ip
       NetworkName: {get_param: [ServiceNetMap, RedisNetwork]}
       ServiceName: redis
+      FixedIPs: {get_param: RedisVirtualFixedIPs}
 
   # The public VIP is on the External net, falls back to ctlplane
   PublicVirtualIP:
