--- a/puppet/services/neutron-server.yaml
+++ b/puppet/services/neutron-server.yaml
@@ -33,6 +33,10 @@ parameters:
     description: Enable Neutron DVR.
     default: false
     type: boolean
+  KeystoneRegion:
+    type: string
+    default: 'regionOne'
+    description: Keystone region for endpoint
 
 resources:
 
@@ -56,6 +60,12 @@ outputs:
                   - '@'
                   - {get_param: [EndpointMap, MysqlInternal, host]}
                   - '/ovs_neutron'
+            neutron::keystone::auth::tenant: 'service'
+            neutron::keystone::auth::public_url: {get_param: [EndpointMap, NeutronPublic, uri]}
+            neutron::keystone::auth::internal_url: { get_param: [ EndpointMap, NeutronInternal, uri ] }
+            neutron::keystone::auth::admin_url: { get_param: [ EndpointMap, NeutronAdmin, uri ] }
+            neutron::keystone::auth::password: {get_param: NeutronPassword}
+            neutron::keystone::auth::region: {get_param: KeystoneRegion}
             neutron::server::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
             neutron::server::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
             neutron::server::auth_tenant: 'service'
