Move setting of Glance's keystone region to API profile
This is not necessary in the controller.yaml and is more appropriate
in the profile.

Change-Id: Ie2badbd87eabb8404acff77e9aa5d091fbdd1499

--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -60,6 +60,10 @@ parameters:
         Rabbit client subscriber parameter to specify
         an SSL connection to the RabbitMQ host.
     type: string
+  KeystoneRegion:
+    type: string
+    default: 'regionOne'
+    description: Keystone region for endpoint
 
 outputs:
   role_data:
@@ -106,6 +110,7 @@ outputs:
         glance::keystone::auth::internal_url: {get_param: [EndpointMap, GlanceInternal, uri]}
         glance::keystone::auth::admin_url: {get_param: [EndpointMap, GlanceAdmin, uri]}
         glance::keystone::auth::password: {get_param: GlancePassword }
+        glance::keystone::auth::region: {get_param: KeystoneRegion}
         glance::registry::db::database_db_max_retries: -1
         glance::registry::db::database_max_retries: -1
         tripleo.glance_api.firewall_rules:
