Move gnocchi's kestone::auth parameters to API profile
In the move to composable services, these parameters are not
necessary in the controller, but in the profile itself. They are not
yet in use but will be used to populate the keystone endpoint.

Change-Id: Iab3ab05e16872d94d3b3ab4827e2f87f4970aee3

--- a/puppet/services/gnocchi-api.yaml
+++ b/puppet/services/gnocchi-api.yaml
@@ -9,6 +9,14 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
+  GnocchiPassword:
+    description: The password for the gnocchi service and db account.
+    type: string
+    hidden: true
+  KeystoneRegion:
+    type: string
+    default: 'regionOne'
+    description: Keystone region for endpoint
 
 resources:
   GnocchiServiceBase:
@@ -29,6 +37,12 @@ outputs:
                 dport:
                   - 8041
                   - 13041
-          - gnocchi::api::keystone_tenant: 'service'
+            gnocchi::api::keystone_tenant: 'service'
+            gnocchi::keystone::auth::tenant: 'service'
+            gnocchi::keystone::auth::region: {get_param: KeystoneRegion}
+            gnocchi::keystone::auth::password: {get_param: GnocchiPassword}
+            gnocchi::keystone::auth::public_url: { get_param: [ EndpointMap, GnocchiPublic, uri ] }
+            gnocchi::keystone::auth::internal_url: {get_param: [EndpointMap, GnocchiInternal, uri]}
+            gnocchi::keystone::auth::admin_url: { get_param: [ EndpointMap, GnocchiAdmin, uri ] }
       step_config: |
         include ::tripleo::profile::base::gnocchi::api
