Move nova's kestone::auth parameters to API profile
In the move to composable services, these parameters are not
necessary in the controller, but in the profile itself. They are not
yet in use but will be used to populate the keystone endpoint.

Change-Id: I42e30243b631c10d9454da444afdb50e551bbb2c

--- a/puppet/services/nova-api.yaml
+++ b/puppet/services/nova-api.yaml
@@ -13,6 +13,14 @@ parameters:
     default: 0
     description: Number of workers for Nova API service.
     type: number
+  NovaPassword:
+    description: The password for the nova service and db account, used by nova-api.
+    type: string
+    hidden: true
+  KeystoneRegion:
+    type: string
+    default: 'regionOne'
+    description: Keystone region for endpoint
 
 resources:
   NovaBase:
@@ -47,5 +55,11 @@ outputs:
             nova::api::default_floating_pool: 'public'
             nova::api::sync_db_api: true
             nova::api::enable_proxy_headers_parsing: true
+            nova::keystone::auth::tenant: 'service'
+            nova::keystone::auth::public_url: {get_param: [EndpointMap, NovaPublic, uri]}
+            nova::keystone::auth::internal_url: {get_param: [EndpointMap, NovaInternal, uri]}
+            nova::keystone::auth::admin_url: {get_param: [EndpointMap, NovaAdmin, uri]}
+            nova::keystone::auth::password: {get_param: NovaPassword}
+            nova::keystone::auth::region: {get_param: KeystoneRegion}
       step_config: |
         include tripleo::profile::base::nova::api
